<resources>
    <string name="app_name">IAMCP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign Out</string>
    <string name="title_activity_task">Task</string>
   <string name="telephoning_gov">When you call elected officials, you will likely speak with a staff member or be given the opportunity to record a message. &lt;br \>&lt;br \>      ►&lt;b>Ask to speak with the right person.&lt;/b> &lt;br \>&lt;br \>       ►&lt;b>Introduce yourself.&lt;/b> &lt;br />&lt;br />        ►&lt;b>State why you are calling.&lt;/b>(include the bills name and number, and your position on it)&lt;br \>&lt;br \>       ►&lt;b>Be brief and cordial&lt;/b>&lt;br \>&lt;br \>      ►&lt;b>Make sure your position is understood.&lt;/b></string>
   <string name="emailing_gov">In addition to calling your representative, it is also wise to begin an email correspondence.  &lt;br \>&lt;br \>      ►&lt;b>Remember by communicating with an official, you\'re launching or strengthening a relationship.&lt;/b> &lt;br \>&lt;br \>       ►&lt;b>Introduce yourself.&lt;/b> &lt;br />&lt;br />        ►&lt;b>State why you are writing.&lt;/b>(include the bills name and number, and your position on it)&lt;br \>&lt;br \>       ►&lt;b>Share personal experience&lt;/b>&lt;br \> EX: Over the last decade I have seen increasing concern from customers about digital privacy.&lt;br \>&lt;br \>      ►&lt;b>Provide evidence to support your position.&lt;/b>&lt;br \> EX: Only one in four K-12 schools offer courses in computer science education.&lt;br />&lt;br />        ►&lt;b>Strengthen your relationship by including details that can strengthen ties to your legislator.&lt;/b></string>
    <string name="schedule_meet">If you want to effectively deliver a message to your representative; a face to face meeting is key. &lt;br \>&lt;br \>      &lt;b>Schedule your meeting&lt;/b> &lt;br \>&lt;br \> ►Do this at least several weeks in advance. Ask to speak with the staffer who schedules meetings. Explain who you are, what you do, and why you want to meet with your representative. &lt;br \> ►If you do not hear back within one week, follow up with another email or phone call. &lt;br \>       ►Remember to prepare for your meeting and understand the message you are trying to convey. &lt;br />&lt;br />        &lt;b>The meeting.&lt;/b>&lt;br \>&lt;br \> ► Be on time.&lt;br \> ► Be flexible, Representatives have busy schedules.&lt;br \> ► Get to your main point quickly.&lt;br \> ► It\'s ok to say you do not know, and get back with an answer later.&lt;br \> ► Take a photo with your representative to share news of your meeting.&lt;br \>&lt;br \>&lt;b>After the meeting.&lt;/b>&lt;br \>&lt;br \> ► Send a thank you note to both the representative and their staff. It is just as important that staffers remember who you are.</string>
    <string name="writing_oped">Letters to the editor and op-eds are two of the mot popular sections of daily newspapers. If your letter is printed it can reach thousands of people. Persistence is important to get your piece printed. &lt;br \>&lt;br \>      &lt;b>Keep it local&lt;/b> &lt;br \>&lt;br \> ►Your local newspaper serves local readers, so you should be sure that what you write about has local relevance. &lt;br \>►Discuss why it matters to your city, state, or region. &lt;br \>&lt;br \> &lt;b>Provide evidence&lt;/b> &lt;br \>&lt;br \>►If possible support your position with facts. You might draw on information from the Voices for Innovation website.&lt;b>Timing is key.&lt;/b> &lt;br \>&lt;br \>►If your letter responds to a news story, be sure to submit it within a few days of when the story ran.&lt;br \>&lt;br \>      &lt;b>Write a headline.&lt;/b> &lt;br \>&lt;br \> ►Even though an editor will likely change a headline, give your letter or op-ed a headline that sums up the piece in a few words.&lt;b>Follow your Newspaper\'s Directions.&lt;/b> &lt;br \>&lt;br \>  &lt;b>Provide your contact information.&lt;/b> &lt;br \>&lt;br \> ►Editor\'s may want to confirm you submitted the letter, so be sure to include your full contact information.  &lt;b>Be persistent!&lt;/b> &lt;br \>&lt;br \> ►Your first submitted letter may not get printed. If you submit letters or op-eds repeatedly over time, some of your pieces will eventually run.</string>
    <string name="white_title">Technology Brings Internet to Underserved Communities.</string>
    <string name="tv_whitespace">Though the United States is a global technology leader, 34 million Americans- including more than 19 million in rural communities- do not have adequate, affordable access to high speed internet.\n\nWithout affordable, reliable broadband connectivity, people around the country, especially in rural areas, are held back by limited access to educational, employment, and business opportunities.</string>
  <string name="tv_whitespacetwo">But proven technology exists that can affordably bring wireless broadband to communities across the nation, especially in rural America. This technology utilizes a part of spectrum known as TV white spaces to deliver broadband access over many miles, compared to Wi-Fi’s reach of approximately 100-325 yards. TV white spaces are spectrum that can be used for TV and radio broadcasts, as well as to deliver fast, affordable, reliable internet access. This emerging technology is already successfully extending broadband in countries around the world. \n\nIn the U.S., technology providers are ready to begin rolling out this new broadband solution, but first policy action is needed by the Federal Communications Commission (FCC).\n\nThe FCC must establish supportive rules that provide sufficient TV white spaces spectrum in every U.S. market to transmit wireless broadband signals over long distances. This policy will open the doors to bringing high-speed internet to millions of Americans who currently lack access, as well as provide additional broadband choices in urban areas.</string>
  <string name="cs_ed">The United States leads the world in technology innovation, but our leadership is jeopardized by insufficient support for computer science education in our nation’s K-12 schools. Today, even as our economy is increasingly driven by information technology, only one of four K-12 schools in the U.S. offers any computer science courses. We can and must do better!\n\n Leaders from all sides agree. On April 25, 2016, a group of CEOs, educators, organizations, and 27 Democratic and Republican governors sent an open letter to Congress and the American people calling for federal funding to provide every student in every school the opportunity to learn computer science.\n\n VFI is proud to support the Computer Science Education Coalition (CSEC), a non-profit organization dedicated to expanding computer science education in K-12. The CSEC is composed of a cross-section of U.S. businesses, education leaders, and NGOs who have come together to expand access to and federal funding for computer science education in K-12 classrooms across America.</string>
  <string name="cs_title">Our goal – Increased federal funding for computer science education this fiscal year.</string>
  <string name="iptitle">Intellectual Property</string>
  <string name="intellectualprop">Intellectual property is a critical driver of technological innovation and economic competitiveness — and is at the very heart of the software business, encouraging innovators to invest in research and product development for the benefit of customers and consumers.\n\nOne of the most pressing issues technology businesses face today is protecting trade secrets. Behind our popular digital tools lies a vast amount of technology, developed in-house or enhanced by companies, and representing countless hours of research and trial-and-error.\n\nAmerica’s economic success and technology leadership depend on a US regulatory system that supports innovation and US competitiveness. Robust protections for patents, including patents for software innovations, are essential to provide incentives for the next great wave of invention. We support patent reform measures that promote fairness and efficiency and deter abusive practices in patent litigation.\n\nChief among these is the Defend Trade Secrets Act (S. 1890), bipartisan legislation that would create a uniform, federal standard for trade secret protection and responds to the nature of 21st century innovation. </string>
  <string name="dataPrivacy1">On March 23, 2018, after a multi-year advocacy effort, the Clarifying Lawful Overseas Use of Data Act (the “CLOUD Act”) was signed into law as part of omnibus legislation.\n\nPassage of the CLOUD Act represents a milestone for digital privacy. U.S. privacy law now better reflects today’s cloud computing technology—not the era of the floppy disc.\n\nWhile the CLOUD Act advances digital privacy and provides important legal clarity, it also represents just one step in building a global data privacy framework. The U.S. must now enter into bilateral agreements with partner nations to protect privacy and strengthen law enforcement.</string>
  <string name="dataprivacytitle">Protecting your Data Online</string>
    <string name="tulane_university">Tulane University</string>
    <string name="tasks_submitted">Tasks Submitted:</string>
    <string name="computer_science_education_test">Computer Science Education</string>
    <string name="primary_policy_concern">Primary Policy Concern:</string>
    <string name="_10">10</string>
    <string name="total_score">Total Score:</string>
    <string name="_500">500</string>
</resources>