<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/frameprof"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/cardView2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/submited_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="24dp"
                    android:text="@string/tasks_submitted"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/organization_name"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="61dp"
                    android:text="@string/tulane_university"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/primary_policy_concern_title"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/primary_policy_concern"
                    android:layout_alignStart="@+id/organization_name"
                    android:text="@string/computer_science_education_test"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/primary_policy_concern"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/organization_name"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/primary_policy_concern"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/numbersubited"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/submited_tasks"
                    android:layout_alignEnd="@+id/primary_policy_concern"
                    android:text="@string/_10"
                    android:textAlignment="center"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usersname"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/organization_name"
                    android:layout_alignStart="@+id/organization_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="-38dp"
                    android:text="Matt Fein"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pointCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="57dp"
                    android:text="@string/total_score"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/usersScore"
                    android:layout_width="33dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/pointCount"
                    android:layout_alignEnd="@+id/primary_policy_concern"
                    android:layout_marginEnd="0dp"
                    android:text="@string/_500"
                    android:textAlignment="center"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.TabLayout
        android:id="@+id/profiletabs"
        android:layout_width="429dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0"
        app:tabBackground="@color/colorPrimaryDark"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/colorLight">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report History" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Acheivements" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profiletabs"
        app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>